[gd_scene load_steps=15 format=3 uid="uid://cygnh6bpp8xna"]

[ext_resource type="Texture2D" uid="uid://v0krrtplrs83" path="res://assets/Player_Sprites/Mage_Run.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dqogjtln4wa4m" path="res://scenes/player_scenes/player.gd" id="1_6fwbo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fwbo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6optk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(35, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8qmr"]
atlas = ExtResource("1_3vyb7")
region = Rect2(70, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3sny"]
atlas = ExtResource("1_3vyb7")
region = Rect2(105, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_shuw1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(140, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_b744r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(175, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2xde"]
atlas = ExtResource("1_3vyb7")
region = Rect2(210, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0ulg"]
atlas = ExtResource("1_3vyb7")
region = Rect2(245, 0, 35, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_qhqgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fwbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6optk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8qmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3sny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shuw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b744r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2xde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0ulg")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fwbo"]
size = Vector2(18, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6optk"]
size = Vector2(18, 32)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_6fwbo")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qhqgy")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_6fwbo")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(2.14, 2.14)

[node name="hurtbox_container" type="Area2D" parent="."]

[node name="hurtbox" type="CollisionShape2D" parent="hurtbox_container"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_6optk")

[node name="timers" type="Node" parent="."]

[node name="i_frame_timer" type="Timer" parent="timers"]
wait_time = 1.509
one_shot = true

[connection signal="area_entered" from="hurtbox_container" to="." method="_on_hurtbox_container_area_entered"]
[connection signal="timeout" from="timers/i_frame_timer" to="." method="_on_i_frame_timer_timeout"]
